--- a/PBL/Views/Shared/_Layout.cshtml
+++ b/PBL/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - PBL</title>
+    <title>@ViewData["Title"] PBLearn</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/PBL.styles.css" asp-append-version="true" />
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light  border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand text-black" asp-area="" asp-controller="Home" asp-action="Index">PBL</a>
+                <a class="navbar-brand text-black" asp-area="" asp-controller="Home" asp-action="Index"><img src="~/pic/Logo.png" height="50" alt="" /></a>
                 <button class="navbar-toggler navbar-dark" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -20,15 +20,12 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-black" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-black" asp-area="" asp-controller="Project" asp-action="Index">Projects List</a>
+                            <a class="nav-link text-black" asp-area="" asp-controller="Project" asp-action="Index"><strong>Projects List</strong></a>
                         </li>
                         @if (User.IsInRole("Teacher"))
                         {
                         <li class="nav-item">
-                                <a class="nav-link text-black" asp-area="" asp-controller="Home" asp-action="Allocate">Allocate a project</a>
+                                <a class="nav-link text-black" asp-area="" asp-controller="Home" asp-action="Allocate"><strong>Allocate a project</strong></a>
                         </li>  
                         }
                         
