--- a/PBL/Views/Project/Details.cshtml
+++ b/PBL/Views/Project/Details.cshtml
@@ -153,12 +153,13 @@ else
     <div style="float:left;width:50%">
 
         <h2>Your submission:</h2>
-        @if (Model.Files != null && Model.Files.Any())
+        @if (Model?.Files != null && Model.Files.Any())
         {
 
             <ul >
                 @foreach (var file in Model.Files)
                     @if (file.UploadedBy != "profesor@test.com")
+                    
                     {
                         <li >
                             <div class="link-wrapper">
