Updated the Models for good practice

--- a/PBL/Views/AllocateController/Index.cshtml
+++ b/PBL/Views/AllocateController/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model Project
+﻿@model ProjectModel
 <form asp-controller="AllocateController" asp-action="Allocate" method="post">
     <div class="form-group bg-dark">
         <label for="userId">Select User:</label>
