--- a/PBL/Views/Home/Index.cshtml
+++ b/PBL/Views/Home/Index.cshtml
@@ -21,3 +21,4 @@
 </center>
 
 <img src="pic/Homepage_bg.png" style="position:fixed; bottom:5%; right:5%; width:40%;" alt="" />
+@*<img src="pic/mema.gif" style="position:fixed; bottom:5%; left:5%; width:40%;" alt="" />*@
