--- a/PBL/Views/Assignment/Create.cshtml
+++ b/PBL/Views/Assignment/Create.cshtml
@@ -26,13 +26,13 @@
                 <span asp-validation-for="DueDate" class="text-danger"></span>
             </div>
 
-            <div class="form-group">
+           @* <div class="form-group">
                 <label asp-for="IsCompleted" class="control-label"></label>
                 <div>
                     <input asp-for="IsCompleted" />
                     <span asp-validation-for="IsCompleted" class="text-danger"></span>
                 </div>
-            </div>
+            </div>*@
 
             <input type="hidden" asp-for="ProjectId" />
 
@@ -42,7 +42,7 @@
         </form>
     </div>
 </div>
-
+<img src="~/pic/Create_assignment_bg.png" style="position:fixed; bottom:5%; right:5%; width:40%;" alt="" />
 @section Scripts {
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
