--- a/PBL/Views/Project/Details.cshtml
+++ b/PBL/Views/Project/Details.cshtml
@@ -254,6 +254,7 @@ else
                     <form asp-controller="Comment" asp-action="DeleteComment" method="post" style="display:inline-table" class="delete-btn">
                         <input type="hidden" name="commentId" value="@comment.CommentId" />
                     <input type="hidden" name="view" value="ProjectDetails" />
+                    <input type="hidden" name="projectId" value="@Model.ProjectId"/>
             <button type="submit" class="btn btn-danger text-black">Delete</button>
         </form>
         }
