--- a/PBL/Views/Assignment/Details.cshtml
+++ b/PBL/Views/Assignment/Details.cshtml
@@ -211,6 +211,7 @@ else
                 <form asp-controller="Comment" asp-action="DeleteComment" method="post" style="display:inline-table" class="delete-btn">
                     <input type="hidden" name="commentId" value="@comment.CommentId" />
                     <input type="hidden" name="view" value="AssignmentDetails" />
+                    <input type="hidden" name="assignmentId" value="@Model.AssignmentId" />
                     <button type="submit" class="btn btn-danger text-black">Delete</button>
                 </form>
             </div>
