--- a/PBL/Views/Home/Index.cshtml
+++ b/PBL/Views/Home/Index.cshtml
@@ -1,4 +1,6 @@
-﻿<center>
+﻿
+<center>
+
     <h1>
         Welcome to the PBLearn platform
     </h1>
@@ -19,6 +21,9 @@
         <p> Please use the above menu to Log into your account, or Register a new one</p>
     }
 </center>
+<div style="position:relative">
+    <p style="position:fixed; bottom:25%; left:5%;" class="col-3"> <font size="12" color="purple">Designed to simplify the process of creating, distributing, and grading assignments in a paperless way!</font></p>
 
-<img src="pic/Homepage_bg.png" style="position:fixed; bottom:5%; right:5%; width:40%;" alt="" />
-@*<img src="pic/mema.gif" style="position:fixed; bottom:5%; left:5%; width:40%;" alt="" />*@
+    <img src="pic/Homepage_bg.png" style="position:fixed; bottom:5%; right:5%; width:40%;" alt="" />
+
+</div>
