--- a/PBL/Views/Project/Index.cshtml
+++ b/PBL/Views/Project/Index.cshtml
@@ -20,6 +20,8 @@
 	<div class="ag-courses_box">
 		@foreach (var project in Model)
 		{
+			var buttonId = "create-assignment-modal-" + project.Id;
+			var modalId = "create-assignment-modal-" + project.Id;
 			<div class="ag-courses_item">
 				<a asp-action="Details" asp-route-id="@project.Id" class="ag-courses-item_link">
 					<div class="ag-courses-item_bg"></div>
@@ -57,11 +59,9 @@
 				}
 				@if (User.IsInRole("Teacher"))
 				{
-					
-					<a class="ag-courses-item_date"  href="#" data-toggle="modal" data-target="#create-assignment-modal">Create Assignment</a>
+					<a class="ag-courses-item_date" href="#" data-toggle="modal" data-target="#@modalId">Create Assignment</a>
 
-
-					<div class="modal fade" id="create-assignment-modal" tabindex="-1" role="dialog" aria-labelledby="create-assignment-modal-label" aria-hidden="true">
+					<div class="modal fade" id="@modalId" tabindex="-1" role="dialog" aria-labelledby="create-assignment-modal-label" aria-hidden="true">
 						<div class="modal-dialog" role="document">
 							<div class="modal-content">
 								<div class="modal-header">
@@ -74,19 +74,19 @@
 									<p>Please select the type of assignment you want to create:</p>
 									<div class="row">
 										<div class="col-md-4">
-										<div class="form-group">
-											<a class="btn btn-primary btn-block" asp-controller="Assignment" asp-action="Create" asp-route-projectId="@project.Id">File Upload Assignment</a>
-										</div>
-										</div>
-										<div class="col-md-4">
-										<div class="form-group">
-											<a class="btn btn-primary btn-block" asp-controller="Assignment" asp-action="Create" asp-route-projectId="@project.Id">Survey Assignment</a>
-										</div>
+											<div class="form-group">
+												<a class="btn btn-primary btn-block" asp-controller="Assignment" asp-action="Create" asp-route-projectId="@project.Id">File Upload Assignment</a>
+											</div>
 										</div>
 										<div class="col-md-4">
-										<div class="form-group">
-											<a class="btn btn-primary btn-block" asp-controller="TextAssignment" asp-action="Create" asp-route-projectId="@project.Id">Text Assignment</a>
+											<div class="form-group">
+												<a class="btn btn-primary btn-block" asp-controller="Assignment" asp-action="Create" asp-route-projectId="@project.Id">Survey Assignment</a>
+											</div>
 										</div>
+										<div class="col-md-4">
+											<div class="form-group">
+												<a class="btn btn-primary btn-block" asp-controller="TextAssignment" asp-action="Create" asp-route-projectId="@project.Id">Text Assignment</a>
+											</div>
 										</div>
 									</div>
 								</div>
@@ -96,8 +96,6 @@
 							</div>
 						</div>
 					</div>
-
-
 
 					<a class="ag-courses-item_date" asp-controller="Project" asp-action="Delete" asp-route-id="@project.Id">Delete Project</a>
 				}
