--- a/PBL/Views/Shared/_Layout.cshtml
+++ b/PBL/Views/Shared/_Layout.cshtml
@@ -22,11 +22,15 @@
                         <li class="nav-item">
                             <a class="nav-link text-black" asp-area="" asp-controller="Project" asp-action="Index"><strong>Projects List</strong></a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-black" asp-area="" asp-controller="Home" asp-action="Privacy"><strong>Test Page</strong></a>
+                        </li>
                         @if (User.IsInRole("Teacher"))
                         {
                         <li class="nav-item">
                                 <a class="nav-link text-black" asp-area="" asp-controller="Home" asp-action="Allocate"><strong>Allocate a project</strong></a>
                         </li>  
+
                         }
                         
                     </ul>
